# datefind

./: .gitignore  .pre-commit-config.yaml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  duties.py  pyproject.toml
.github/workflows/: create-release.yml  reusable-tests.yml
src/datefind/: __init__.py  constants.py  datefind.py  pattern_factory.py
src/datefind/utils/: date_factory.py
tests/: fixture.txt  test_datefind.py
