[project]
    authors = [{ name = "Nate Landau", email = "github@natenate.org" }]
    classifiers = [
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
    ]
    dependencies = ["regex>=2026.4.4", "tzlocal>=5.3.1"]
    description = "A python module for locating dates within text."
    license = "MIT"
    license-files = ["LICENSE"]
    name = "datefind"
    readme = "README.md"
    requires-python = ">=3.11, <3.15"
    version = "0.4.0"

    [project.urls]
        Homepage   = "https://github.com/natelandau/datefind"
        Repository = "https://github.com/natelandau/datefind"

[dependency-groups]
    dev = [
        "commitizen>=4.13.10",
        "coverage>=7.13.5",
        "duty>=1.9.0",
        "freezegun>=1.5.5",
        "mypy>=1.20.2",
        "prek>=0.3.10",
        "pytest-clarity>=1.0.1",
        "pytest-cov>=7.1.0",
        "pytest-env>=1.6.0",
        "pytest-mock>=3.15.1",
        "pytest-pretty-terminal>=1.1.0",
        "pytest-sugar>=1.1.1",
        "pytest-xdist>=3.8.0",
        "pytest>=9.0.3",
        "rich>=15.0.0",
        "ruff>=0.15.11",
        "types-python-dateutil>=2.9.0.20260408",
        "typos>=1.45.1",
        "yamllint>=1.38.0",
    ]

[build-system]
    build-backend = "uv_build"
    requires      = ["uv_build>=0.8.4,<0.9.0"]

[tool.commitizen]
    bump_message               = "bump(release): v$current_version → v$new_version"
    changelog_merge_prerelease = true
    tag_format                 = "v$version"
    update_changelog_on_bump   = true
    version_provider           = "uv"

[tool.coverage.report] # https://coverage.readthedocs.io/en/latest/config.html#report
    exclude_lines = [
        'assert_never',
        'def __repr__',
        'except [\w\s\._]+ as .*:',
        'if TYPE_CHECKING:',
    ]
    fail_under = 20
    # omit = ["src/datefind/constants.py"]
    precision    = 1
    show_missing = true
    skip_covered = true
    skip_empty   = true

[tool.coverage.run]
    branch       = true
    command_line = "--module pytest"
    data_file    = ".cache/.coverage"
    source       = ["src"]

[tool.coverage.xml]
    output = ".cache/coverage.xml"

[tool.mypy] # https://mypy.readthedocs.io/en/latest/config_file.html
    cache_dir                   = ".cache/mypy"
    disallow_any_unimported     = false
    disallow_subclassing_any    = false
    disallow_untyped_decorators = false
    disallow_untyped_defs       = true
    exclude                     = ["tests/"]
    follow_imports              = "normal"
    ignore_missing_imports      = true
    junit_xml                   = ".cache/mypy.xml"
    no_implicit_optional        = true
    pretty                      = false
    show_column_numbers         = true
    show_error_codes            = true
    show_error_context          = true
    strict_optional             = false
    warn_redundant_casts        = true
    warn_unreachable            = true
    warn_unused_ignores         = true

[tool.pytest.ini_options]
    addopts             = "--color=yes --doctest-modules --exitfirst --failed-first --strict-config --strict-markers --junitxml=.cache/pytest.xml"
    cache_dir           = ".cache/pytest"
    doctest_optionflags = ["IGNORE_EXCEPTION_DETAIL", "NORMALIZE_WHITESPACE"]
    filterwarnings      = ["error", "ignore::DeprecationWarning", "ignore::ResourceWarning"]
    markers             = ["no_db: marks tests as not needing a database"]
    testpaths           = ["src", "tests"]
    xfail_strict        = true

[tool.hatch.metadata]
    allow-direct-references = true

[tool.ruff] # https://github.com/charliermarsh/ruff
    exclude = [
        ".cache",
        ".git",
        ".venv",
        "__pypackages__",
        "_build",
        "build",
        "dist",
        "tmp",
        "venv",
    ]
    fix = true
    line-length = 100
    output-format = "grouped"
    src = ["src", "tests"]
    target-version = "py311"

    [tool.ruff.lint]
        ignore = [
            "ANN204", # missing return type annotation for special method `__init__`
            "B006",   # mutable-argument-default
            "B008",   # function-call-in-default-argument
            "COM812", # Trailing comma missing"
            "CPY001", # Missing copyright notice at top of file
            "D107",   # undocumented-public-init
            "D213",   # multi-line-summary-second-line
            "E501",   # line-too-long
            "FIX002", # Line contains TODO, consider resolving the issue
            "TD002",  # Missing author in TODO
            "TD003",  # Missing issue link on the line following this TODO
            "UP007",  # non-pep604-annotation
        ]
        per-file-ignores = { "tests/*.py" = [
            "A002",
            "A003",
            "ANN001",
            "ANN003",
            "ANN201",
            "ANN202",
            "ANN205",
            "ARG001",
            "ARG002",
            "ARG005",
            "D102",
            "D417",
            "DTZ001",  #datetime called without a `tzinfo` argument
            "E712",
            "ERA001",
            "F403",
            "PGH003",
            "PLC2701",
            "PLR0913",
            "PLR0917",
            "PLR2004",
            "PLR6301",
            "S101",
            "SLF001",

        ], "duties.py" = ["ANN001"] }
        select = ["ALL"]
        unfixable = [
            "ERA001", # Commented out code
            "F401",   # unused-import
            "F841",   # unused-variable
        ]
        [tool.ruff.lint.mccabe]
            max-complexity = 10

        [tool.ruff.lint.pydocstyle]
            convention = "google"

        [tool.ruff.lint.pylint]
            max-args = 6

    [tool.ruff.format]
        indent-style              = "space"
        line-ending               = "auto"
        quote-style               = "double"
        skip-magic-trailing-comma = false
